change to utf-8 and fix deprecated method