@@ -3,6 +3,8 @@
  */
 package factory;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * @author yuyc
  *
@@ -10,15 +12,16 @@ package factory;
 public class AnimalFactory extends Factory {
 
 	/*
-	 * (非 Javadoc)
+	 * (Javadoc)
 	 *
 	 * @see factory.Factory#createProduct()
 	 */
 	@Override
 	public Swimmable createProduct(String className)
-			throws ClassNotFoundException, InstantiationException, IllegalAccessException {
-		Class cls = Class.forName("factory." + className);
-		Swimmable obj = (Swimmable) cls.newInstance();
+			throws ClassNotFoundException, InstantiationException, IllegalAccessException, IllegalArgumentException,
+			InvocationTargetException, NoSuchMethodException, SecurityException {
+		Class<?> cls = Class.forName("factory." + className);
+		Swimmable obj = (Swimmable) cls.getConstructor().newInstance();
 		return obj;
 	}
 
